/**
 use Java 14 features
 the first time, run ./gradlew clean ; ./gradlew eclipseJdt
 */
plugins {
    id 'java'
    id 'application'
    id 'eclipse'
}
sourceCompatibility = JavaVersion.VERSION_14
repositories {
    jcenter()
}
dependencies {
    testImplementation 'org.testng:testng:6.14.3'
    compile "org.apache.logging.log4j:log4j-api:2.5"
    compile "org.apache.logging.log4j:log4j-core:2.5"
    compile "com.fasterxml.jackson.core:jackson-core:2.11.0"
    compile "com.fasterxml.jackson.core:jackson-annotations:2.11.0"
    compile "com.fasterxml.jackson.core:jackson-databind:2.11.0"
    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.0"
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
    compile group: 'log4j', name: 'log4j', version: '1.2.17'



}
application {
//    mainClassName = project.hasProperty("mainClass") ? getProperty("mainClass") : "NULL"
    mainClassName = 'scibib.App'
}
tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
eclipse.jdt.file.withProperties { props ->
    props['org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures']= 'enabled'
    props['org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures']= 'ignore'
}
test {
    useTestNG()
}
